--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -381,7 +381,7 @@ h6 {
   z-index: 997;
   height: 60px;
   box-shadow: 0px 2px 20px rgba(1, 41, 112, 0.1);
-  background-color: #fff;
+  background-color: #ffd700;
   padding-left: 20px;
   /* Toggle Sidebar Button */
   /* Search Bar */
@@ -439,7 +439,7 @@ h6 {
 .header .search-form input:focus,
 .header .search-form input:hover {
   outline: none;
-  box-shadow: 0 0 10px 0 rgba(1, 41, 112, 0.15);
+  box-shadow: 0 0 10px 0 rgb(223, 171, 1);
   border: 1px solid rgba(1, 41, 112, 0.3);
 }
 
